Fix window title file name template on wayland

This depends on https://invent.kde.org/plasma/kwin/-/merge_requests/3835

BUG: 465524